# double-color-ball

./: .gitignore  README.md
api-server/: Cargo.toml
api-server/src/: binary.rs  cli.rs  log.rs  main.rs  rest.rs  vo.rs
contract/double_color_ball/: .env  README.md  program.json
contract/double_color_ball/inputs/: double_color_ball.in
contract/double_color_ball/src/: main.leo
web-server/: admin.html  index.html
web-server/css/: main.css  reset.css
web-server/js/: admin.js  main.js
